--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yan Long"
   avatar           : "yanlong.png"
-  bio              : "Sensing with Security"
+  bio              : "Security and Privacy in Sensing"
   location         : "Ann Arbor, MI, USA"
   employer         :
   pubmed           : 
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/longyan97"
+  github           : "longyan97"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yan-long-b7916015b/"
+  linkedin         : "yan-long-b7916015b"
   orcid            : 
   pinterest        :
   soundcloud       :
