--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yan Long"
   avatar           : "yanlong.png"
-  bio              : "Sensing with better security and privacy."
+  bio              : "Enable sensing with better security and privacy."
   location         : "Ann Arbor, MI, USA"
   employer         :
   pubmed           : 
