leaving for bos

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yan Long"
   avatar           : "yanlong.png"
   bio              : "Enable sensing with better security and privacy."
-  location         : "Ann Arbor, MI, USA"
+  location         : "Boston, MA, USA"
   employer         :
   pubmed           : 
   googlescholar    :  #"https://scholar.google.com/citations?user=1OHEpEsAAAAJ&hl=en&oi=ao"
