--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  # - title: "Publications"
-  #   url: /publications/
+  - title: "Publications"
+    url: /publications/
 
   
 
@@ -14,8 +14,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
 
-  # - title: "Media"
-  #   url: /media/  
+  - title: "Media"
+    url: /media/  
     
   - title: "Bio"
     url: /bio/
