--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Boston, MA, USA"
   employer         :
   pubmed           : 
-  googlescholar    :  #"https://scholar.google.com/citations?user=1OHEpEsAAAAJ&hl=en&oi=ao"
+  googlescholar    : "https://scholar.google.com/citations?user=1OHEpEsAAAAJ&hl=en&oi=ao"
   email            : "yanlong@umich.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
