--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yan Long"
+  name             : "Yan Long (龙颜)"
   avatar           : "yanlong.png"
   bio              : "Enable sensing with better security and privacy."
   location         : "Boston, MA, USA"
