--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yan Long (龙颜)"
   avatar           : "yanlong.png"
-  bio              : "Enable sensing with better security and privacy."
+  bio              : ""
   location         : "Boston, MA, USA"
   employer         :
   pubmed           : 
