dept personal page added

--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yan Long (龙颜)"
+  name             : "Yan LONG"
   avatar           : "yanlong.png"
-  bio              : "Incoming Assistant Professor, University of Virginia"
+  bio              : "Assistant Professor, University of Virginia"
   location         : "Boston, MA, USA"
   employer         :
   pubmed           : 
