--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Yan LONG"
+  chinese_name     : "龍颜"
   avatar           : "yanlong.png"
   bio              : # "Assistant Professor, UVA CS"
-  location         : "Boston, MA, USA"
+  location         : ""
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=1OHEpEsAAAAJ&hl=en&oi=ao"
